--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
