--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "clsx": "^1.2.1",
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
