--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "rsuite-table": "^5.10.6"
   },
   "devDependencies": {
